--- a/bmi_calculator.html
+++ b/bmi_calculator.html
@@ -7,7 +7,7 @@
 </head>
 <link rel="stylesheet" href="bmi.css">
 <body>
-        <h1 style="color: rgb(102, 140, 140);">BMI Calculator</h1>
+        <h1 style="color: rgb(102, 140, 140);">PhysiqueNav</h1>
     <div>
         <input placeholder="Height in cm" type="number" id="height">
         <input type="number" placeholder="weight in kg" id="weight">
